# xAnimate

./: .gitignore  README.md  setup.cfg  setup.py
src/ezanimate/: __init__.py  _make_animation.py
src/xAnimate/: __init__.py  _make_animation.py
src/xAnimate/frames/: __init__.py  _xarray_defaults.py  frame_function.py
