[metadata]
name = ezanimate
#version = attr: my_package.VERSION
description = Some basic tools for simplifying animation of xarray datasets
long_description = file: README.md

[options]
install_requires =
    numpy
    matplotlib
    xarray
    imageio
package_dir=
    =src
packages=find:
python_requires = >=3.7

[options.packages.find]
where=src
